Position the spinner at center

--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -104,7 +104,9 @@ $logo: "Josh-Software-Logo.svg";
   height: 50px;
   clear: both;
 }
-
+.align-center{
+  text-align: center;
+}
 .splash {
   margin-top: -5px;
   margin-bottom: 10px;
