--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -32,7 +32,7 @@
         %h3
           %img{:src => 'assets/glyphicons_273_drink.png', :title => 'Fun at Josh'}
           Fun at JOSH
-        #fun
+        #fun.align-center
           %img{:src => 'assets/loading.gif'}
   .span
     .well.well-home-callout
