Adding the font

--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -2,7 +2,7 @@
   font-family: 'Jura';
   font-style: normal;
   font-weight: 500;
-  src: local('Jura Medium'), local('Jura-Medium'), url(google-content.woff) format('woff');
+  src: local('Jura Medium'), local('Jura-Medium'), url(/google-content.woff) format('woff');
 }
 
 // @import "dev_helpers";
