--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
       %title 
         = yield(:title)
     - else
-      %title Ruby on Rails development expert | Josh Software Private Limited 
+      %title Ruby on Rails experts in India | Josh Software Private Limited 
     = stylesheet_link_tag 'application'
     = javascript_include_tag "application"
     /[if lt IE 9]
@@ -24,6 +24,8 @@
               %a{:href => "team"} team
             %li
               %a{:href => "open_source"} open source
+            %li
+              %a{:href => "http://blog.joshsoftware.com"} blog
     .container
       = yield
       .clear-footer
