--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -2,12 +2,23 @@
   .top
   .center
     .row
-      .span7.splash-text
-        %p Josh is all about enthusiasm. We believe that "Programming is an Art". Working with rails is our passion. 
-        %p We deliver world class software using Ruby on Rails in various industry verticals like BFSI, Manufacturing, Media, eCommerce, Social Sector and Information Technology. Our expertize lies in core application development, scalability and performance tuning. We are passionate about open source and contribute extensively in the form of ruby gems and rails plugins.
-        %p We are located in India and our offshore development services provide Cost Effective State of the Art Rails Development. We partner with Rackspace and Engine Yard to provide excellent Rails hosting.
-      .span4.splash-gem
-        %img{:src => "images/gem.png"}
+      .span8.splash-text
+        %p 
+          Josh is all about enthusiasm and passion.
+        %p 
+          We are one of India's few companies that 
+          %b.expertize  work only in Ruby On Rails.
+          We are fanatical about code smell, automation testing and continuous integration. We specialize in building web-applications from concept to design and then implementation and maintenance. We have a special focus on scalability and performance. 
+        %p We work in various industry verticals like Insurance, Manufacturing, Media, eCommerce, Social Sector and Information Technology as long as the work is in Ruby. 
+        %p
+          We believe that
+          %b.expertize Programming is an Art.
+          If you believe it too, we should talk!
+      .span3.splash-gem
+        %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book"}
+          %img{:src => "assets/ruby_and_mongodb_book.jpg", :alt => "Ruby and MongoDB Web Development"}
+        %p
+          %strong Books By Us
   .bottom
 .row.sepatator
 .row.product-callouts
