--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
             %li
               %a{:href => "open_source"} open source
             %li
-              %a{:href => "http://blog.joshsoftware.com"} blog
+              %a{:href => "http://blog.joshsoftware.com", :target => "_blank"} blog
     .container
       = yield
       .clear-footer
