--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -15,7 +15,7 @@
           %b.expertize Programming is an Art.
           If you believe it too, we should talk!
       .span3.splash-gem
-        %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book"}
+        %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
           %img{:src => "assets/ruby_and_mongodb_book.jpg", :alt => "Ruby and MongoDB Web Development"}
         %p
           %strong Books By Us
