Fixing syntax error and placeholder for no image

--- a/app/views/static/team.html.haml
+++ b/app/views/static/team.html.haml
@@ -8,8 +8,9 @@
         %li
           - classes = isFirst ? "first" : "" 
           - isFirst = false
+          - image = member[:image].blank? ? "http://placehold.it/100x100" : member[:image]
           %a.thumbnail{:data => {:member => "#{member[:id]}" }, :class => "#{classes}"}
-            %img.thumbsmall{:src => "#{member[:image]}", :title => "Click to view #{member[:name]}'s detail", :alt => "#{member[:name]}"}
+            %img.thumbsmall{:src => "#{image}", :title => "Click to view #{member[:name]}'s detail", :alt => "#{member[:name]}"}
   .span6
     - isFirst = true
     - @team_members.each do |member|
