--- a/app/views/static/team.html.haml
+++ b/app/views/static/team.html.haml
@@ -8,7 +8,7 @@
         %li
           - classes = isFirst ? "first" : "" 
           - isFirst = false
-          - image = member[:image].blank? ? "http://placehold.it/100x100" : member[:image]
+          - image = member[:image].blank? ? "assets/team/placeholder.gif" : member[:image]
           %a.thumbnail{:data => {:member => "#{member[:id]}" }, :class => "#{classes}"}
             %img.thumbsmall{:src => "#{image}", :title => "Click to view #{member[:name]}'s detail", :alt => "#{member[:name]}"}
   .span6
