--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-  background: #0a1017 url("tunnel.jpg") no-repeat center top;
+  background: #0a1017 url("tunnel.jpg") no-repeat center top fixed;
   font-family: 'Jura', Helvetica, sans-serif;
 }
 
