updating copyright symbol

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,7 @@
         %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
           %img{:src => 'assets/glyphicons_377_linked_in.png'}
       .center
-        Copyright © 2012 Josh Software Pvt. Ltd.
+        Copyright &copy; 2012 Josh Software Pvt. Ltd.
 //Google analytics
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
