--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -351,3 +351,12 @@ $portfolio_menu_width: 195px;
 #bio-box-sticky-wrapper {
   float: left;
 }
+
+.credits {
+  margin-right: 20px;
+}
+
+.credits-content{
+  display: none;
+}
+
