--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,6 +45,25 @@
           %img{:src => 'assets/glyphicons_377_linked_in.png'}
       .center
         Copyright &copy; 2012 Josh Software Pvt. Ltd.
+        %a.pull-right.credits{:rel => "popover", :data => {:placement => "top", :title => 'Credits'} } Credits
+      .credits-content
+        %ul
+          %li
+            Designed by
+            %a{:href => 'http://niestudio.com', :target => '_blank'} NieSTUDIO 
+          %li
+            Built with
+            %a{:href => "http://twitter.github.com/bootstrap", :target =>"_blank"} Bootstrap
+          %li
+            Icons by
+            %a{:href => 'http://glyphicons.com/', :target => '_blank'} GLYPHICONS.com
+          %li
+            Hosted on
+            %a{:href => 'http://heroku.com', :target => '_blank'} Heroku
+          %li
+            Opensourced on
+            %a{:href => 'https://github.com/joshsoftware/website', :target => '_blank'} Github
+
 //Google analytics
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
