--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -5,6 +5,8 @@
     #sticker
       .well-trans
         .top
+          %strong
+            Lastest Projects
         .center
           %ul
             - @projects.each do |project|
