--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -59,7 +59,7 @@
             6, Thube Park, 
             Shivajinagar, 
             Pune - 411005, 
-            Maharastra, India.
+            Maharashtra, India.
         %p
           %a{:target => "_blank", :href => "https://maps.google.co.in/maps?f=q&source=s_q&hl=en&geocode=&q=Josh+Software+Private+Limited,+Thube+park,+Shivaji+Nagar,+Pune,+Maharashtra&aq=t&sll=18.815427,76.775144&sspn=10.655534,19.753418&vpsrc=0&ie=UTF8&hq=Josh+Software+Private+Limited,&hnear=Thube+Park,+Pune+Vidyapith+Rd,+Shivaji+Nagar,+Pune,+Maharashtra&ll=18.532921,73.851814&spn=0.010437,0.01929&t=m&z=16&iwloc=A&cid=7465183415235984484"}
             %i{:class => "icon-map-marker"}
