--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,25 @@
       %title Ruby on Rails experts in India | Josh Software Private Limited 
     %meta{:name => "keywords", :content => "#{@keywords || 'Ruby on Rails, RoR, India, Rails development, open source, Web application development'}"}
     %meta{:name => "description", :content => "#{@description || 'Ruby on Rails experts in India and we believe that programming is an Art'}"}
+    <!-- For third-generation iPad with high-resolution Retina display: -->
+    <!-- Size should be 144 x 144 pixels -->
+    = favicon_link_tag 'assets/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
+
+    <!-- For iPhone with high-resolution Retina display: -->
+    <!-- Size should be 114 x 114 pixels -->
+    = favicon_link_tag 'assets/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
+    <!-- For first- and second-generation iPad: -->
+    <!-- Size should be 72 x 72 pixels -->
+    = favicon_link_tag 'assets/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
+
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <!-- Size should be 57 x 57 pixels -->
+    = favicon_link_tag 'assets/apple-touch-icon-57x57-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    = favicon_link_tag '/favicon.ico', :rel => 'shortcut icon'
+
     = stylesheet_link_tag 'application'
     = javascript_include_tag "application"
     /[if lt IE 9]
