--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -65,7 +65,7 @@
             %i{:class => "icon-map-marker"}
             view map
         %p
-          %li{:class => "icon-signal"} 
+          %i{:class => "icon-signal"} 
           &nbsp;+91-20-25539995
         %p
           %i{:class => "icon-envelope"}
