Updated home page and portfolio page

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -2,23 +2,19 @@
   .top
   .center
     .row
-      .span8.splash-text
+      .span11.splash-text
         %p 
-          Josh is all about enthusiasm and passion.
-        %p 
-          We are one of India's few companies that 
-          %b.expertize  work only in Ruby On Rails.
-          We are fanatical about code smell, automation testing and continuous integration. We specialize in building web-applications from concept to design and then implementation and maintenance. We have a special focus on scalability and performance. 
-        %p We work in various industry verticals like Insurance, Manufacturing, Media, eCommerce, Social Sector and Information Technology as long as the work is in Ruby. 
+          Josh is all about enthusiasm and passion. As its name suggests, it was an innate enthusiasm and passion for building pioneering web solutions that led to the establishment of Josh Software in 2007.  Since its inception, Josh Software has focused in on the 
+          %b.expertize Ruby on Rails 
+          framework to develop web solutions for their diverse clientele; today, its one of the few companies in India that provide solutions solely on this open source framework. The organization partners with its clientele to develop innovative web applications from concept, design, implementation and maintenance. With a belief that
+          %b.expertize Programming is An Art, 
+          the brand has a unique organizational process focused on building solutions to facilitate high performance, scalability, and high-standard code quality.
         %p
-          We believe that
-          %b.expertize Programming is an Art.
-          If you believe it too, we should talk!
-      .span3.splash-gem
-        %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
-          %img{:src => "assets/ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"}
+          Josh Software is the vision of its founders Gautam Rege and Sethupathi Asokan to build one of the leading Ruby on Rails companies in the world. Along with its founders, the brand has built a core leadership team with experts across specific domains of its business as an effort to ensure a high standard of delivery for each of its client partners.
         %p
-          %strong Books By Us
+          The brand has handpicked each member of its team with only one criteria- a hunger for developing path-breaking code! Apart from building and curating its own team, Josh Software has taken various initiatives in contributing back to the Ruby open source community; the brand promotes the Ruby on Rails framework in India through an annual conference, regular blog, and organizing local meet-up groups. The brand has even published a book on 
+          %a{:href => "http://localhost:3002/assets/ruby_and_mongo_db_book.png"}Ruby and Mongo DB Web Development 
+          penned by its Founder-Director Gautam Rege. Josh Software takes pride in being an Indian brand committed to building web solutions for clients across the world.
   .bottom
 .row.sepatator
 .row.product-callouts
