Fixing the mongodb book link

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -13,7 +13,7 @@
           Josh Software is the vision of its founders Gautam Rege and Sethupathi Asokan to build one of the leading Ruby on Rails companies in the world. Along with its founders, the brand has built a core leadership team with experts across specific domains of its business as an effort to ensure a high standard of delivery for each of its client partners.
         %p
           The brand has handpicked each member of its team with only one criteria- a hunger for developing path-breaking code! Apart from building and curating its own team, Josh Software has taken various initiatives in contributing back to the Ruby open source community; the brand promotes the Ruby on Rails framework in India through an annual conference, regular blog, and organizing local meet-up groups. The brand has even published a book on 
-          %a{:href => "http://localhost:3002/assets/ruby_and_mongo_db_book.png"}Ruby and Mongo DB Web Development 
+          %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}Ruby and Mongo DB Web Development 
           penned by its Founder-Director Gautam Rege. Josh Software takes pride in being an Indian brand committed to building web solutions for clients across the world.
   .bottom
 .row.sepatator
