updated home page text

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -2,19 +2,29 @@
   .top
   .center
     .row
-      .span11.splash-text
+      .span8.splash-text
         %p 
-          Josh is all about enthusiasm and passion. As its name suggests, it was an innate enthusiasm and passion for building pioneering web solutions that led to the establishment of Josh Software in 2007.  Since its inception, Josh Software has focused in on the 
-          %b.expertize Ruby on Rails 
-          framework to develop web solutions for their diverse clientele; today, its one of the few companies in India that provide solutions solely on this open source framework. The organization partners with its clientele to develop innovative web applications from concept, design, implementation and maintenance. With a belief that
-          %b.expertize Programming is An Art, 
-          the brand has a unique organizational process focused on building solutions to facilitate high performance, scalability, and high-standard code quality.
+          Driven by enthusiasm and passion, Josh is India’s leading company in building innovative web applications working exclusively in 
+          %b.expertize Ruby On Rails
+          since 2007.
+        %p 
+          We partner with our clients from concept, design, implementation and maintenance. We believe that
+          %b.expertize Programming is An Art
+          and have a unique organizational process focused on building solutions to facilitate high performance, scalability, and high-standard code quality.
         %p
-          Josh Software is the vision of its founders Gautam Rege and Sethupathi Asokan to build one of the leading Ruby on Rails companies in the world. Along with its founders, the brand has built a core leadership team with experts across specific domains of its business as an effort to ensure a high standard of delivery for each of its client partners.
-        %p
-          The brand has handpicked each member of its team with only one criteria- a hunger for developing path-breaking code! Apart from building and curating its own team, Josh Software has taken various initiatives in contributing back to the Ruby open source community; the brand promotes the Ruby on Rails framework in India through an annual conference, regular blog, and organizing local meet-up groups. The brand has even published a book on 
-          %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}Ruby and Mongo DB Web Development 
-          penned by its Founder-Director Gautam Rege. Josh Software takes pride in being an Indian brand committed to building web solutions for clients across the world.
+          We are fanatic about Test Coverage, Continuous Integration and code smell. Timelines are important but code quality is far more important. Working code is fine but we also stress test our apps for concurrency and load. 
+        %p 
+          %a{href: "http://codeclimate.com", target: '_blank'} CodeClimate,
+          %a{href: "http://circleci.com", target: '_blank'} CircleCi,
+          %a{href: "http://github.com", target: '_blank'} Github,
+          %a{href: "http://pivotaltracker.com", target: '_blank'} Pivotal Tracker,
+          and
+          %a{href: "http://trello.com", target: '_blank'} Trello
+          are some of the tools we use to ensure our clients are always happy!
+      .span3.splash-gem
+        %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
+          %img{:src => "assets/ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"}
+          %strong Books By Us
   .bottom
 .row.sepatator
 .row.product-callouts
