--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,7 +65,7 @@
         %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
           %img{:src => 'assets/glyphicons_377_linked_in.png'}
       .center
-        Copyright &copy; 2012 Josh Software Pvt. Ltd.
+        Copyright &copy; 2007 - 2013 Josh Software Pvt. Ltd.
         %a.pull-right.credits{:rel => "popover", :data => {:placement => "top", :title => 'Credits'} } Credits
       .credits-content
         %ul
